tests/__snapshots__/api-toBeVoid.test.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toBeVoid: stderr 1`] = `
"Error: Type 'string' is not 'void'.

  12 |   expect(returnsVoid()).type.toBeVoid();
  13 | 
> 14 |   expect(returnsString()).type.toBeVoid();
     |                                ^
  15 | });
  16 | 
  17 | test("is NOT void?", () => {

       at ./__typetests__/toBeVoid.test.ts:14:32 ❭ is void?

Error: Type 'void' is 'void'.

  18 |   expect(returnsString()).type.not.toBeVoid();
  19 | 
> 20 |   expect(returnsVoid()).type.not.toBeVoid();
     |                                  ^
  21 | });
  22 | 

       at ./__typetests__/toBeVoid.test.ts:20:34 ❭ is NOT void?

"
`;

exports[`toBeVoid: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

fail ./__typetests__/toBeVoid.test.ts
  × is void?
  × is NOT void?

Targets:    1 failed, 1 total
Test files: 1 failed, 1 total
Tests:      2 failed, 2 total
Assertions: 2 failed, 2 passed, 4 total
Duration:   <<timestamp>>

Ran all test files.
"
`;
